--- a/amazon.html
+++ b/amazon.html
@@ -154,6 +154,7 @@
         </div>
       </div>
     </div>
+    <script src="data/cart.js"></script>
     <script src="data/products.js"></script>
     <script src="Script/amazon.js"></script>
     
